Fri Jun  2 11:06:33 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/fuzz.pl:

          Bumped up the levels for the 80 char lines and preprocessor
          comment tests.  The latter should now not run by default.

Thu Jun  2 12:30:00 2000  Kirthika Parameswaran  <kirthika@cs.wustl.edu>

	* ace/Caching_Utility.cpp: Changed the cache entries limit to 0 so
	  that when the Purge_Percent is 100, all the entries are purged
	  from the cache. Thanks to Edan Ayal <edana@bandwiz.com> for
	  reporting this bug and sending in the fix too! 
	
Thu Jun  1 15:16:26 2000  Ossama Othman  <ossama@uci.edu>

	* ace/config-linux-common.h:

	  The change that allowed more than 256 file descriptors to be
	  opened for non-root processes on Linux only works for more
	  recent Linux kernels, such as the 2.2.x series.  As such, the
	  default Select Reactor size is now set to 256 for Linux kernels
	  older than 2.2.0.  Thanks to David for pointing out this
	  limitation.

	* m4/platform.m4 (ACE_DEFAULT_SELECT_REACTOR_SIZE):

	  Added test that sets the default Select Reactor size to 256 if
	  the Linux kernel version is less than 2.2.0.  This change is
	  related to the 256 file descriptor limit described above.

Thu Jun 01 12:35:00 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

        * ace/ace_dll.dsp:  Fixed typos in ACEMFC configuration.  Thanks
          to Steve for pointing this out.

Thu Jun  1 10:08:31 2000  Darrell Brunsch <brunsch@uci.edu>

        * bin/fuzz.pl:

          Was printing out "line test" when doing the preprocessor
          comment test.

Thu Jun  1 08:43:14 2000  Darrell Brunsch <brunsch@uci.edu>

          Fuzz is a script whose purpose is to check through ACE/TAO
          files for easy to spot (by a perl script, at least) problems.

          Usage is:
          fuzz.pl [-dhm] [-l level]

              -d         turn on debugging
              -h         display this help
              -l level   set detection level (default = 5)